--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "i18next": "^17.0.12",
+    "i18next-xhr-backend": "^3.1.2",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-i18next": "^10.12.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
