--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "i18next": "^17.0.12",
     "i18next-xhr-backend": "^3.1.2",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
